# SpiNNakerGraphFrontEnd

./: .gitignore  .pylint_dict.txt  .pylintrc  .ratexcludes  .readthedocs.yml  .travis.yml  1  CITATION.cff  Jenkinsfile  LICENSE_POLICY.md  MANIFEST.in  PULL_REQUEST_TEMPLATE  README.md  exit  mypy.bash  mypyd.bash  pypi_to_import  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py  spiNNakerGraphFrontEnd.cfg  spinnakerGraphFrontEnd.cfg
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: c_actions.yml  python_actions.yml
doc/: doc_requirements.txt  unfiltered-files.txt
doc/source/: .gitignore  conf.py  index.rst  modules.rst
examples/: Makefile  Makefile.common  constants.h
examples/danial_stuff/: get_machine_json.py
examples/game_of_life/: Makefile  game_of_life.py  game_of_life_cell.py  life.c  life_new.c  life_old.c
examples/heat_demo/: Makefile  heat_demo.c  heat_demo.py  heat_demo_command_edge.py  heat_demo_edge.py  heat_demo_new.c  heat_demo_vertex.py  heat_demo_with_python_vis.py
gfe_examples/: Makefile
gfe_integration_tests/: Makefile  script_builder.py  sdram_test_vertex.py  test_conway_examples.py  test_extra_monitor.py  test_fixed_router.py  test_hello_world.py  test_hello_world_untimed.py  test_logger_example.py  test_scripts.py  test_speed_examples_router.py  test_speed_up_data_in.py  test_timer_setup.py
link_test/: Makefile  __init__.py  link_test_receive_vertex.py  link_test_receiver.mk  link_test_send_vertex.py  link_test_sender.mk  link_test_vertex.py  link_tester.py  run_link_test.py
spinnaker_graph_front_end/: __init__.py  _version.py  abstract_partitioned_data_specable_vertex.py  config_setup.py  dead.cfg  graph_front_end_simulator_interface.py  spiNNakerGraphFrontEnd.cfg  spin_graph_front_end.py  spinnaker.py  spinnaker_graph_front_end.py  validation_config.cfg
spynnaker_graph_front_end/: DataSpecedGeneratorInterface.py  __init__.py  _version.py  abstract_data_speced_vertex.py  abstract_partitioned_data_specable_vertex.py  spinnaker_graph_front_end.py
unittests/: test_cfg_checker.py  test_doc_checker.py  test_import_all.py  test_version.py
(+873 files in other folders)
