# Copyright (c) 2023 The University of Manchester
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = SpiNNakerGraphFrontEnd
version = attr: spinnaker_graph_front_end._version.__version__
description= Front end to the SpiNNaker tool chain which uses a basic graph
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SpiNNakerManchester/SpiNNakerGraphFrontEnd
license = Apache License 2.0
classifiers =
        Development Status :: 5 - Production/Stable
        Intended Audience :: Developers
        Intended Audience :: Science/Research
        License :: OSI Approved :: Apache Software License
        Natural Language :: English
        Operating System :: POSIX :: Linux
        Operating System :: Microsoft :: Windows
        Operating System :: MacOS
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3.11
maintainer = SpiNNakerTeam
maintainer_email = spinnakerusers@googlegroups.com

[options]
python_requires = >=3.7, <4
packages = find:
zip_safe = True
include_package_data = True
install_requires =
        SpiNNFrontEndCommon == 1!7.0.0

[options.package_data]
* =
        spiNNakerGraphFrontEnd.cfg

[options.extras_require]
test =
        SpiNNakerTestBase == 1!7.0.0
        # pytest will be brought in by pytest-cov
        pytest-cov
        testfixtures
